# sparsematrix

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  clang_macports.cmake  default_clang.env  example.cpp  macports_clang.env  macports_gcc.cmake  macports_gcc.env  sparsematrix.h  testrunner.cpp
.github/workflows/: cmake.yml
examples/: example.cpp
sparsematrix/: sparsematrix.h
tests/: CMakeLists.txt  test_basic.cpp  test_dim_errors.cpp  test_mult_1d.cpp  test_mult_2d.cpp  test_scaling.cpp
